structmeta-tests/tests/compile_fail/struct_meta/option_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
   --> tests/compile_fail/struct_meta/option_flag.rs:5:5
    |
5   |     flag: Option<Flag>,
    |     ^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
    |
note: required by a bound in `ParseBuffer::<'a>::parse`
   --> $CARGO/syn-1.0.94/src/parse.rs
    |
    |     pub fn parse<T: Parse>(&self) -> Result<T> {
    |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
